--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<meta name="description" content="Deebo">
-<meta name="author" content="Frenify">
+<meta name="description" content="DulanjaAbeysinghe">
+<meta name="author" content="Dulanja">
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
