--- a/index.html
+++ b/index.html
@@ -376,6 +376,13 @@
 								<div class="progress_bg"></div>
 							</div>
 						</div>
+						<div class="progress_item" data-value="45">
+							<div class="item_in">
+								<h3 class="progress_title">Android</h3>
+								<span class="progress_percent"></span>
+								<div class="progress_bg"></div>
+							</div>
+						</div>
 					</div>
 				</section>
 				<!-- /CV: Skills Section -->
